coloquei css do tituli na tag

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </div>
               <div class="col-12 col-md-6 mb-5">
                 <div class="d-flex justify-content-center">
-                    <img class="img-fluid" src="assets/img/ticket.png" alt="imagem ticket cinema">
+                    <img class="img-fluid" src="assets/img/ticket.png" width="200px" height="200px" alt="imagem ticket cinema">
                 </div>
               </div>
             </div>
